--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="" href="./img/icons8-gafas-30.png">
         <title>BookFlix</title>
     </head>
-    <body>
+    <body>K
         <header>
             <h1>Bookflix</h1>
             <div class="buscador">
